--- a/docs/stat562/note_stat562.Rmd
+++ b/docs/stat562/note_stat562.Rmd
@@ -991,7 +991,7 @@ A shortcoming of this approach to finding best unbiased estimators is that, even
 the variance of _any_ unbiased estimator. In fact, in the usually favorable case of being a one-parameter exponential family, the most that we can say is that $f(x|\theta)$ exists a parameter $\tau(\theta)$ with an unbiased estimator that achieves the Cramer-Roo
 Lower Bound. However, in other typical situations, for other parameters, the bound may not be attainable. These situations cause concern because, if we cannot find an estimator that attains the lower bound, we have to decide whether no estimator can attain it or whether we must look at more estimators.
 
-**Example 1.3.14 (Normal variance bound)**
+**Example 7.3.14 (Normal variance bound)**
 
 **Corollary 7.3.15 (Attainment)**
 
@@ -1059,10 +1059,17 @@ $$\lambda(\vec x)=\frac{\sup\limits_{\Theta_0} L(\theta|\vec x)}{\sup\limits_{\T
 
 A *likelihood ratio test (LRT)* is any test that has a rejection region of the form $\{\vec x:\lambda(\vec x)\le c\}$, where $c$ is any number satisfying $0\le c\le 1$.
 
-**Example 201204
-12**
+**Example 20120412**
 
 
+**Corollary 8.3.13** Consider the hypothesis problem posed in **Theorem 8.3.12**. Suppose $T(\vec X)$ is a sufficient statistic for $\theta$ and $g(t|\theta_i)$ is the pdf or pmf of $T$ corresponding to $\theta_i,i=0,1$. Then any test based on $T$ with rejection region $S$ (a subset of the sample space of T) is a UMP level a test if it satisfies 
+$$t\in S\ \text{ if }\ g(t|\theta_1)>kg(t|\theta)$$
+and
+$$t\in S^c\ \text{ if }\ g(t|\theta_1)<kg(t|\theta)$$
+for some $k\ge 0$, where $\alpha=P_{\theta_0}(T\in S)$
+
+
+**Theorem 8.3.17 (Karlin-Rubin)** Consider testing $H_0:\theta\le\theta_0$ versus $H_1:\theta>\theta_0$. Suppose that T is a sufficient statistic for $\theta$ and the family of pdfs or pmfs $\{g(t|\theta):\theta\in\Theta\}$ of $T$ has an MLR. Then for any $t_0$, the test that rejects $H_0$ if and only if $T>t_0$ is a UMP level $\alpha$ test, where $\alpha= P_{\theta_0}(T>t_0)$.
 
 # 10 Asymptotic Evaluations
 ## 10.1 Point Estimation
