--- a/static/stat566/hw_stat566.Rmd
+++ b/static/stat566/hw_stat566.Rmd
@@ -233,3 +233,88 @@ $y_{ijk}$ is response for the 4 replicate EU when  $i^{th}$ level of Factor A an
 Assumptions:
 
 $\varepsilon_{ijk}\sim iid N(0,\sigma^2)$; $\sum_i^2\tau_i=0$; $\sum_j^2\beta_j=0$; $\sum_i^2(\tau\beta)_{ij}=0$; $\sum_j^2(\tau\beta)_{ij}=0$
+
+## HW2
+
+### Problem 1: 
+Note: This is a 23 design with replications for each treatment combination. Analyze the data as a typical 3-factor factorial design.
+In part (a), do all the necessary tests and report conclusions along with p values appropriately.
+In part (b), provide plots along with your answer.
+In Part(c), clearly recommend which factor levels appropriately in question context and provide reasons.
+
+
+### Problem 2:
+
+Scientists wish to understand how the amount of sugar (A with two levels), culture strain (B with two levels), type of fruit (C with blueberry or strawberry), and pH (D with two levels) influence shelf life of refrigerated yogurt. In a preliminary experiment, they produce one batch of each of the sixteen kinds of yogurt. The yogurt is then placed in two coolers, eight batches in each cooler. The response is the number of days till an off odor is detected from the batch.
+
+Analyze these data to determine how the treatments affect time till off odor.
+(First, you need to find out which effects are confounded with blocks according to given table of data. Then estimate all effects and find out which effects (out of non-confounding effects) are non-negligible. Provide the plot you used to find this out. Then write the complete model you would fit for these data based on our finding so far. Next fit the model with non-negligible effects and block effects. Provide the complete ANOVA table. Based on the ANOVA table, explain which effects are significant at 5% significance level.)
+
+Problem 3:
+Consider the single replicated $2^3$ factorial design with ABC confounded with two blocks.
+Prove algebraically the $SS_{ABC}=SS_{Block}$ (see the example did in class for $2^2$ design)
+
+$$SS_{ABC}=\frac{n}{2^k}C_{ABC}^2=\frac{1}{2^3}(-\bar y_{(1)}+\bar y_{a}+\bar y_{b}-\bar y_{ab}+\bar y_{c}-\bar y_{ac}-\bar y_{bc}+\bar y_{abc})^2$$
+
+$$SS_{Block}=\sum_i^2\sum_j^2\sum_k^2\sum_l^2\hat\delta_l^2=2^3(\delta_1^2+\delta_2^2)=2^3[(\bar y_{blk1}-\bar y_{...})^2+(\bar y_{blk2}-\bar y_{...})^2]$$
+
+$$=2^3[(\frac{1}{2^3}[\bar y_{(1)}+\bar y_{ab}+\bar y_{ac}+\bar y_{bc}]-\frac{1}{2^3}y_{...})^2+(\frac{1}{2^3}[\bar y_{a}+\bar y_{b}+\bar y_{c}+\bar y_{abc}]-\frac{1}{2^3}\bar y_{...})^2]$$
+$$=\frac{1}{2^3}[(\bar y_{(1)}+\bar y_{ab}+\bar y_{ac}+\bar y_{bc}-y_{...})^2+(\bar y_{a}+\bar y_{b}+\bar y_{c}+\bar y_{abc}-\bar y_{...})^2]$$
+
+
+Problem 4:
+A 24 factorial experiment is planned but complete blocks of 16 experimental units (EUs) cannot be obtained. Numerous blocks of 8 homogenous EU are available. Assume that we obtain only one observation for each treatment combination.
+
+Using the methods learned in the class, give a random assignment of treatment combinations in the blocks for each of the following scenario. (You have to decide how many blocks to use based on given information here)
+
+(a)  the ABCD interaction is confounded with incomplete blocks
+
+(1),ab, ac, bc, ad, bd, cd abcd | a, b, c, abc, d, abd, acd, bcd
+
+(b)  the ABC interaction is confounded with incomplete blocks
+
+(1), ab, ac, bc, d, abd, acd, bcd | a, b, c, abc, ad, bd, cd, abcd
+
+
+### Problem 5:
+
+A researcher needs to conduct a 24 factorial experiment but cannot obtain complete blocks. Two blocks of 8 homogeneous experimental units (EU)s are obtained and the researcher arbitrarily assigns treatments to the blocks.
+The following two treatment assignments are given. For each of the above assignments, report all the effects that are confounded with incomplete blocks.
+
+|   | Block 1 | Block 2 | confounded effects |
+| --- | --- | --- | --- |
+|(i) |a, ab, ac, abc, bd, bcd, cd, d	  | (1), ad, abd, acd, abcd, b, c, bc| AD |
+|(ii)|(1), a, abc, abd, acd, bc, bd, cd|ab, ac, ad, abcd, b, c, bcd, d| BCD |
+
+
+### Problem 6:
+
+A 24 factorial experiment is to be conducted in 4 blocks with ABC interaction and BCD interaction effects are confounded with incomplete blocks with single replication.
+(a) What other effects, if any, are confounded with incomplete blocks? Explain.
+
+$ABC\times BCD=AB^2C^2D=AD$ is confounded with incomplete blocks automatically.
+
+(b) Give the treatment assignment of blocks for one replication of experiment.
+
+| Block1 | Block2| Block3 | Block4|
+| --- | --- | --- | --- |
+| ABC- | ABC- | ABC+ | ABC+ |
+| BCD- | BCD+ | BCD- | BCD+ |
+| (1) | ab | a  | b  |
+| bc  | ac | abc| c  |
+| abd | bcd| bd | d  |
+| acd |  d | cd |abcd|
+
+
+(c) Provide the partial ANVOA table with source and degrees of freedom for this design.
+
+|source|$SS_{Blk}$|$SS_A$|$SS_B$|$SS_{AB}$|$SS_{C}$|$SS_{AC}$|$SS_{BC}$|$SS_{D}$|$SS_{BD}$|$SS_{ABD}$|$SS_{CD}$|$SS_{ACD}$|$SS_{ABCD}$|$SS_T$|
+| ---  | ---      | ---  | ---  | ---     | ---    |    ---  |    ---  |   ---  |    ---  |     ---  |    ---  |     ---  |      ---  | --- |
+|   df |  3       |   1  |   1  |   1     |   1    |   1     |   1     |   1    |   1     |       1  |      1  |       1  |        1  |15   |
+
+
+### Problem 7:
+
+Consider the 25 factorial design in 2 blocks. If ABCDE interaction effect is confounded with blocks, then list the remaining treatment combinations in the same block as acde.
+
+(1), ab, ac, bc, ad, bd, cd, abcd, ae, be, ce, abce, de, abde, acde, bcde
