--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -250,7 +250,8 @@ Scientists wish to understand how the amount of sugar (A with two levels), cultu
 Analyze these data to determine how the treatments affect time till off odor.
 (First, you need to find out which effects are confounded with blocks according to given table of data. Then estimate all effects and find out which effects (out of non-confounding effects) are non-negligible. Provide the plot you used to find this out. Then write the complete model you would fit for these data based on our finding so far. Next fit the model with non-negligible effects and block effects. Provide the complete ANOVA table. Based on the ANOVA table, explain which effects are significant at 5% significance level.)
 
-Problem 3:
+### Problem 3:
+
 Consider the single replicated $2^3$ factorial design with ABC confounded with two blocks.
 Prove algebraically the $SS_{ABC}=SS_{Block}$ (see the example did in class for $2^2$ design)
 
@@ -262,7 +263,8 @@ $$=2^3[(\frac{1}{2^3}[\bar y_{(1)}+\bar y_{ab}+\bar y_{ac}+\bar y_{bc}]-\frac{1}
 $$=\frac{1}{2^3}[(\bar y_{(1)}+\bar y_{ab}+\bar y_{ac}+\bar y_{bc}-y_{...})^2+(\bar y_{a}+\bar y_{b}+\bar y_{c}+\bar y_{abc}-\bar y_{...})^2]$$
 
 
-Problem 4:
+### Problem 4:
+
 A 24 factorial experiment is planned but complete blocks of 16 experimental units (EUs) cannot be obtained. Numerous blocks of 8 homogenous EU are available. Assume that we obtain only one observation for each treatment combination.
 
 Using the methods learned in the class, give a random assignment of treatment combinations in the blocks for each of the following scenario. (You have to decide how many blocks to use based on given information here)
