--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -265,17 +265,23 @@ $$=\frac{1}{2^3}[(\bar y_{(1)}+\bar y_{ab}+\bar y_{ac}+\bar y_{bc}-y_{...})^2+(\
 
 ### Problem 4:
 
-A 24 factorial experiment is planned but complete blocks of 16 experimental units (EUs) cannot be obtained. Numerous blocks of 8 homogenous EU are available. Assume that we obtain only one observation for each treatment combination.
+A $2^4$ factorial experiment is planned but complete blocks of 16 experimental units (EUs) cannot be obtained. Numerous blocks of 8 homogenous EU are available. Assume that we obtain only one observation for each treatment combination.
 
 Using the methods learned in the class, give a random assignment of treatment combinations in the blocks for each of the following scenario. (You have to decide how many blocks to use based on given information here)
 
+There are $2^4=16$ treatment combination, 16 observation. There are $16/8=2$ blocks of 8 homogenous EU.
+
 (a)  the ABCD interaction is confounded with incomplete blocks
 
-(1),ab, ac, bc, ad, bd, cd abcd | a, b, c, abc, d, abd, acd, bcd
+|Block1 | Block2|
+|  ---  |  ---  |
+|(1),ab, ac, bc, ad, bd, cd abcd | a, b, c, abc, d, abd, acd, bcd|
 
 (b)  the ABC interaction is confounded with incomplete blocks
 
-(1), ab, ac, bc, d, abd, acd, bcd | a, b, c, abc, ad, bd, cd, abcd
+|Block1 | Block2|
+| ---   | --- |
+|(1), ab, ac, bc, d, abd, acd, bcd | a, b, c, abc, ad, bd, cd, abcd|
 
 
 ### Problem 5:
@@ -296,6 +302,8 @@ A 24 factorial experiment is to be conducted in 4 blocks with ABC interaction an
 
 $ABC\times BCD=AB^2C^2D=AD$ is confounded with incomplete blocks automatically.
 
+$2^p-p-1=2^2-2-1=1$. There is only one automaticlly confounded effect.
+
 (b) Give the treatment assignment of blocks for one replication of experiment.
 
 | Block1 | Block2| Block3 | Block4|
@@ -304,7 +312,7 @@ $ABC\times BCD=AB^2C^2D=AD$ is confounded with incomplete blocks automatically.
 | BCD- | BCD+ | BCD- | BCD+ |
 | (1) | ab | a  | b  |
 | bc  | ac | abc| c  |
-| abd | bcd| bd | d  |
+| abd | bcd| bd | ad |
 | acd |  d | cd |abcd|
 
 
