--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -246,9 +246,73 @@ In Part(c), clearly recommend which factor levels appropriately in question cont
 ### Problem 2:
 
 Scientists wish to understand how the amount of sugar (A with two levels), culture strain (B with two levels), type of fruit (C with blueberry or strawberry), and pH (D with two levels) influence shelf life of refrigerated yogurt. In a preliminary experiment, they produce one batch of each of the sixteen kinds of yogurt. The yogurt is then placed in two coolers, eight batches in each cooler. The response is the number of days till an off odor is detected from the batch.
-
 Analyze these data to determine how the treatments affect time till off odor.
-(First, you need to find out which effects are confounded with blocks according to given table of data. Then estimate all effects and find out which effects (out of non-confounding effects) are non-negligible. Provide the plot you used to find this out. Then write the complete model you would fit for these data based on our finding so far. Next fit the model with non-negligible effects and block effects. Provide the complete ANOVA table. Based on the ANOVA table, explain which effects are significant at 5% significance level.)
+
+ABCD effects are confounded with blocks according to given table of data.
+
+```{r echo=T,message=F, results='hold', out.width='30%'}
+hw2_2_y <- c(34,34,32,34,34,39,38,37, 35,36,39,41,39,44,44,42)
+hw2_2_block <- c(rep(1,8),rep(2,8))
+hw2_2_name <- c("(1)","ab", "ac", "ad", "bc", "bd", "cd", "abcd", "a", "b", "c", "d", "abc", "abd", "acd", "bcd")
+hw2_2_table <- data.frame(hw2_2_name,hw2_2_block,hw2_2_y)
+
+hw2_2_table <- hw2_2_table[c(1,9,10,2,11,3,5,13,12,4,6,14,7,15,16,8),]
+hw2_2_table <- cbind(hw2_2_table,FrF2::FrF2(16,4,randomize = F))
+
+hw2_2_model <- aov(hw2_2_y~hw2_2_block+A*B*C*D,hw2_2_table)
+hw2_2_effect <- coef(hw2_2_model)[3:16]
+
+library(daewr)
+halfnorm(hw2_2_effect,alpha=0.15)
+
+library(ggplot2)
+library(gghalfnorm)
+gghalfnorm(hw2_2_effect,labs =names(hw2_2_effect), nlab=4)+ theme_light()
+```
+Form the half-normal quantiles plot, D effects is non-negligible after estimating all effects. 
+
+The complete model you would fit for these data based on the finding. 
+
+The single replicate $2^4$ factorial model with confounde ABCD effect as blocks, and without neglegible terms is:
+
+$$y_{ij}=\mu+\tau_i+\beta_{blk}+\varepsilon_{ij}$$
+for $i=1,2$ ; $blk=1,2$; $j=1,2,3,4$, where 
+
+$\tau_i$ is fixed main effect of $i^{th}$ level of  Factor D;
+
+$\beta_{blk}$ is effect of $j^{th}$ level of block;
+
+$\varepsilon_{ij}$ is random error for the four replicates Exerimental Unit when $i^{th}$ level of Factor D and $j^{th}$ level of block are applied.
+
+$y_{ijk}$ is response for the 4 replicate EU when  $i^{th}$ level of Factor D and  $j^{th}$ level of block are applied.
+
+Assumptions:
+
+$\varepsilon_{ij}\sim iid N(0,\sigma^2)$; $\sum_i^2\tau_i=0$
+
+Fit the model with non-negligible effects and block effects. get the complete ANOVA table.
+
+```{r echo=F,message=F, results='hold', out.width='30%'}
+hw2_2_model_non_neg <- aov(hw2_2_y~hw2_2_block+D,hw2_2_table)
+pander::pander(summary(hw2_2_model_non_neg))
+sum((hw2_2_table$hw2_2_y- mean(hw2_2_table$hw2_2_y))^2)
+
+```
+
+ ---------------------------------------------------------------
+     &nbsp;        Df   Sum Sq   Mean Sq   F value    Pr(>F)   
+ ----------------- ---- -------- --------- --------- -----------
+  **hw2_2_block**   1    90.25     90.25     28.97    0.0001249 
+
+      **D**         1      81       81        26      0.0002041 
+
+   **Residuals**    13    40.5     3.115      NA         NA     
+
+   **Total**        15  211.75 
+ ---------------------------------------------------------------
+
+ Based on the ANOVA table, factor D and block effects are significant at 5% significance level.)
+
 
 ### Problem 3:
 
