--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -240,7 +240,7 @@ $\varepsilon_{ijk}\sim iid N(0,\sigma^2)$; $\sum_i^2\tau_i=0$; $\sum_j^2\beta_j=
 Note: This is a $2^3$ design with replications for each treatment combination. Analyze the data as a typical 3-factor factorial design.
 In part (a), do all the necessary tests and report conclusions along with p values appropriately.
 
-```{r echo=F, message=F, results='hold', out.width='30%'}
+```{r echo=F, message=F,collapse=T, results='hold', out.width='30%'}
 hw2_1_table <- readxl::read_excel("Table6_6.xlsx")
 hw2_1_table <- hw2_1_table%>%mutate(hw2_1_rep=c(rep(c(1,2),8)))
 hw2_1_model <- aov(y~A*B*C,hw2_1_table)
@@ -248,21 +248,34 @@ hw2_1_model <- aov(y~A*B*C,hw2_1_table)
 hw2_1_table$A <- as.factor(hw2_1_table$A)
 hw2_1_table$B <- as.factor(hw2_1_table$B)
 hw2_1_table$C <- as.factor(hw2_1_table$C)
-kableExtra::kable(t(hw2_1_table)) %>%kableExtra::kable_styling("striped", full_width = F)
+library(kableExtra)
+kable(t(hw2_1_table)) %>%kable_styling("striped", full_width = F)
 library(ggpubr)
 ggline(data = hw2_1_table, x = "A", y = "y", add = c("mean", "jitter"),shape= "B",  color = "C", linetype = "C", ylab= "y", xlab="A")
 
 pander::pander(summary(hw2_1_model))
 
-hw2_1_effect<- coef(hw2_1_model)[2:8]
-daewr::halfnorm(hw2_1_effect,alpha=0.55)
-
 # hw2_1_model_non_neg <- aov(y~A*C,hw2_1_table)
 # pander::pander(summary(hw2_1_model_non_neg))
 ```
-Based on ANOVA table, factor C, AC, BC have significant effects at 0.05 significance level. Their P-values are 0.008516, 0.0004176, 0.003728 respectivly. Although the effect of factor AB is not significant at 0.05 significance level (P-value=0.005602), keeping it in the model is recommended.
+Based on ANOVA table, factor C, AB, AC, BC have significant effects at 0.05 significance level. Their P-values are 0.008516,0.005602, 0.0004176, 0.003728 respectivly. That means, effect of class of mail, type of mail, and offered price on average number of orders are not independent. Therefore, simple effects examinations are recommended.
 
-Base on the half-normal quantiles plot, only the effect of factor ABC is negligible after estimating all effects. 
+```{r echo=F, message=F,collapse=T, results='hold', out.width='30%'}
+library(mosaic)
+kable(favstats(y ~ A, data=hw2_1_table)) %>%kable_styling("striped", full_width = F,font_size = 6)
+kable(favstats(y ~ B, data=hw2_1_table)) %>%kable_styling("striped", full_width = F,font_size = 6)
+kable(favstats(y ~ A+B, data=hw2_1_table)) %>%kable_styling("striped", full_width = F,font_size = 6)
+kable(favstats(y ~ A+C, data=hw2_1_table)) %>%kable_styling("striped", full_width = F,font_size = 6)
+kable(favstats(y ~ B+C, data=hw2_1_table)) %>%kable_styling("striped", full_width = F,font_size = 6)
+kable(favstats(y ~ A+B+C, data=hw2_1_table)) %>%kable_styling("striped", full_width = F,font_size = 6)
+hw2_1_model <- aov(y~A*B*C,hw2_1_table)
+library(emmeans)
+a_b <- pairs(lsmeans(hw2_1_model,~ A|B))
+a_c <- pairs(lsmeans(hw2_1_model,~ A|C))
+b_c <- pairs(lsmeans(hw2_1_model,~ B|C))
+kable(test(rbind(a_b,a_c,b_c),adjust="tukey"),format="latex")%>%kable_styling("condensed",full_width=F,font_size = 6)
+```
+
 
  ---
 
@@ -283,9 +296,13 @@ The plot of studentized residuals versus fitted value shows vertical deviations 
 
 In Part(c), clearly recommend which factor levels appropriately in question context and provide reasons.
 
-The result shows the interaction effects of ABC is negligible.
+Base on the half-normal quantiles plot, only the effect of factor ABC is negligible after estimating all effects. 
 
 ```{r echo=F, message=F, results='hold', out.width='30%'}
+
+hw2_1_effect<- coef(hw2_1_model)[2:8]
+daewr::halfnorm(hw2_1_effect,alpha=0.55)
+
 # hw2_1_table_mean <- hw2_1_table%>%group_by(A,B,C)%>%summarise(mean_y=mean(y))
 # hw2_1_model_mean <- aov(mean_y~A*B*C,hw2_1_table_mean)
 # pander::pander(summary(hw2_1_model_mean))
@@ -450,7 +467,7 @@ $2^p-p-1=2^2-2-1=1$. There is only one automaticlly confounded effect.
 
 |source|$SS_{Blk}$|$SS_A$|$SS_B$|$SS_{AB}$|$SS_{C}$|$SS_{AC}$|$SS_{BC}$|$SS_{D}$|$SS_{BD}$|$SS_{ABD}$|$SS_{CD}$|$SS_{ACD}$|$SS_{ABCD}$|$SS_E$|$SS_T$|
 | ---  | ---      | ---  | ---  | ---     | ---    |    ---  |    ---  |   ---  |    ---  |     ---  |    ---  |     ---  |      ---  | ---  | --- |
-|   df |  1       |   1  |   1  |   1     |   1    |   1     |   1     |   1    |   1     |       1  |      1  |       1  |        1  |   2  |15   |
+|   df |  3       |   1  |   1  |   1     |   1    |   1     |   1     |   1    |   1     |       1  |      1  |       1  |        1  |   0  |15   |
 
 
 ### Problem 7:
